--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-rr",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/RR/",
+  "homepage": "https://AjayVishnuE.github.io/RR/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
